<resources>
    <string name="app_name">Ticket doctor</string>

    <string name="host" translatable="false">https://ipOdominio.com/contexto
    </string>
    <!--     <string name="host">ip:puerto/contexto</string> -->

    <!-- web services -->
    <string name="ws_borrame_URL" translatable="false">%1$s/rest/auth</string>
    <string name="ws_test_URL" translatable="false">%1$s/rest/fleets</string>
    <string name="ws_response_URL" translatable="false">
        %1$s/rest/smsMessageSender/response
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This email address is invalid</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for
        providing email
        completions."
    </string>
    <string name="des_logo_3b" translatable="false">logo3b</string>
    <string name="title_activity_borrame">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_main">Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="caption">Tiendas 3B</string>


    <!--dummys-->
    <string name="dummy_text">dummy</string>
    <string name="dummy_text_17">Sistemas Regional</string>
    <string name="dummy_text_improcedente">Improcedente</string>
    <string name="dummy_text_caption">APP CR - Ajuste tamaño de columna
        individual
    </string>
    <string name="dummy_text_ticket">654321</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social
        recommendations
    </string>
    <string name="pref_description_social_recommendations">Recommendations for
        people to contact based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages
    </string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message
        notifications
    </string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dummy_date">31 - 12 - 2016</string>
    <string name="dummy_text_applicant">Esquivel Cervantes, Maria Eugenia
    </string>
    <string name="error_login_symptoms">symptoms FAILURE</string>
    <string name="error_ticket_fragment_get_tickets">getTickets FAILURE</string>
    <string name="error_login_users">users FAILURE</string>
    <string name="error_login_categories">categories FAILURE</string>
    <string name="error_login_diagnostics">diagnostics FAILURE</string>
    <string name="error_login_type_symptoms">type symptoms FAILURE</string>
    <string name="error_login_symptom_diagnostic">symptom diagnostic FAILURE
    </string>
    <string name="error_login_imp_cause">imp cause FAILURE</string>
    <string name="error_login_branch_type">branch type FAILURE</string>
    <string name="error_login_branch">branch FAILURE</string>
    <string name="error_login_standard_solution">standard solution FAILURE
    </string>
    <string name="error_login_possible_origin">possible origin FAILURE</string>
    <string name="error_login_ticket_status">ticket status FAILURE</string>
    <string name="error_login_provider">provider FAILURE</string>
</resources>
